[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-ai-pinescript-expert"
version = "0.1.0"
description = "AI agent for answering PineScript v6 questions using RAG over the official docs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "FaustoS88" }]
keywords = ["pinescript", "tradingview", "pydantic-ai", "rag", "agent", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pydantic-ai>=0.0.22",
    "openai>=1.7.0",
    "asyncpg>=0.29.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.0",
    "streamlit>=1.28.0",
    "crawl4ai>=0.4.247",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.urls]
Repository = "https://github.com/FaustoS88/Pydantic-AI-Pinescript-Expert"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
